# tetryonics

./: ATTRIBUTION.md  LICENSE  MANUAL.md  README.md  package.json  pyproject.toml  tetryonics.js
examples/: demo.py
tests/: test_book1_quantum.py  test_book2_electrodynamics.py  test_book3_chemistry.py  test_book4_cosmology.py  test_book5_geometrics.py
tetryonics/: __init__.py  biochem.py  charge.py  constants.py  cosmology.py  dynamics.py  electrical.py  elements.py  energy.py  fields.py  geometrics.py  geometry.py  kinematics.py  levels.py  matter.py  music.py  numbertheory.py  optics.py  particles.py  radiation.py  spectra.py  statistics.py  thermodynamics.py  units.py  waves.py
